force-app/main/default/objects/Bonus__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>Date Invoice was Paid</description>
    <inlineHelpText>Date Invoice was Paid</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>