force-app/main/default/objects/Bonus__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <description>Date Invoice was Sent</description>
    <inlineHelpText>Date Invoice was Sent</inlineHelpText>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>