force-app/main/default/objects/Bonus__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date that Bonus needs to be verified</description>
    <inlineHelpText>Date that Bonus needs to be verified</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>