force-app/main/default/objects/Bonus__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Lookup to Opportunity that resulted in the Contract this is a Bonus for</description>
    <inlineHelpText>Lookup to Opportunity that resulted in the Contract this is a Bonus for</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bonuses</relationshipLabel>
    <relationshipName>Bonuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>